--- a/requirements.txt
+++ b/requirements.txt
@@ -7,6 +7,7 @@ chardet==4.0.0
 charset-normalizer==2.0.12
 click==8.1.3
 Flask==2.1.2
+Flask-Cors==3.0.10
 Flask-Migrate==3.1.0
 Flask-SQLAlchemy==2.5.1
 gunicorn==20.1.0
