--- a/notes/ExampleGameState.jsonc
+++ b/notes/ExampleGameState.jsonc
@@ -15,6 +15,7 @@
     "players": [
         {
             "id": 1,
+            "display-name": "Jayce Mitchell", // Really only needed to avoid extra calls in the UI
             "starting-card": "rabbit",
             "hand": {
                 "rat": 2,
@@ -24,6 +25,7 @@
         },
         {
             "id": 2,
+            "display-name": "Ada Gates",
             "starting-card": "snake",
             "hand": {
                 "snake": 1,
@@ -34,6 +36,7 @@
         },
         {
             "id": 4,
+            "display-name": "Glitch",
             "starting-card": "chicken",
             "hand": {
                 "chicken": 1,
